Added support for videos in a different format

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <div class="video-wrapper">
     <video id="videoPlayer" controls>
-        <source src="./ressources/AC_DC - Touch Too Much 2024-10-11 16-52-03.mp4" type="video/mp4">
+        <source src="./ressources/test.mp4" type="video/mp4">
         Dein Browser unterstützt das Video-Tag nicht.
     </video>
 
@@ -18,7 +18,6 @@
         <h1>Wir haben dich lieb, Oma!</h1>
         <p>Dieses Video von uns ist für dich und wir hoffen es gefällt dir.</p>
         <p>Alles Gute zum Geburtstag!</p>
-        <button class="fullscreen-btn" onclick="toggleFullScreen()">Vollbildmodus</button>
     </div>
 </div>
 
