Added birtday video with git LFS

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <div class="video-wrapper">
     <video id="videoPlayer" controls>
-        <source src="./ressources/AC_DC - Touch Too Much 2024-10-11 16-52-03.mp4" type="video/mp4">
+        <source src="./ressources/birthdayWishes.mp4" type="video/mp4">
         Dein Browser unterstützt das Video-Tag nicht.
     </video>
 
